--- a/Labs/Lab2/after/index.html
+++ b/Labs/Lab2/after/index.html
@@ -29,10 +29,10 @@
         </ul>
       </div>
     </header>
-    <section>
-      <div class="story">
+    <section class="row">
+      <div class="col-md-9 col-lg-8 col-sm-10">
         <h3>Stars in the Heavens</h3>
-        <img src="/img/sunspots.jpg" alt="star" class="right" />
+        <img src="/img/sunspots.jpg" alt="star" class="float-right img-thumbnail w-25" />
         <p>Across the centuries, another world at the edge of forever paroxysm of global death corpus callosum Drake Equation
           inconspicuous motes of rock and gas kindling the energy hidden in matter science brain is the seed of intelligence,
           Hypatia cosmos hearts of the stars from which we spring light years rogue, emerged into consciousness rich in mystery
@@ -41,11 +41,11 @@
           cluster great turbulent clouds Apollonius of Perga not a sunrise but a galaxyrise dispassionate extraterrestrial
           observer rich in heavy atoms, courage of our questions dream of the mind's eye galaxies Cambrian explosion network
           of wormholes?</p>
-        <div>
-          <img src="/img/black-hole.jpg" />
-          <img src="/img/M-106.jpg" />
-          <img src="/img/mystic-mountain.jpg" />
-          <img src="/img/comet.jpg" />
+        <div class="row">
+          <img src="/img/black-hole.jpg" class="col" />
+          <img src="/img/M-106.jpg" class="col" />
+          <img src="/img/mystic-mountain.jpg" class="col" />
+          <img src="/img/comet.jpg" class="col" />
         </div>
 
         <ul>
@@ -105,7 +105,7 @@
           </tr>
         </table>
       </div>
-      <div>
+      <div class="col-md-3 col-lg-4 col-sm-2">
         <h3>Contact Form</h3>
         <form>
           <label>Name:</label>
