--- a/Labs/Lab1/after/index.html
+++ b/Labs/Lab1/after/index.html
@@ -104,6 +104,22 @@
             </td>
           </tr>
         </table>
+
+        <div>
+          <h4>
+            <a href="#">First Planet</a>
+          </h4>
+          <div>
+            <p>Mercury</p>
+          </div>
+          <h4>
+            <a href="#">Second</a>
+          </h4>
+          <div>
+            <p>Venus</p>
+          </div>
+        </div>
+
       </div>
       <div>
         <h3>Contact Form</h3>
