--- a/Labs/Lab5/after/index.html
+++ b/Labs/Lab5/after/index.html
@@ -31,6 +31,28 @@
     </header>
     <section class="row">
       <div class="col-md-9 col-lg-8 col-sm-10">
+
+        <div class="row">
+          <div class="carousel slide" data-ride="carousel" data-interval="500">
+            <div class="carousel-inner">
+
+              <div class="carousel-item active">
+                <img src="/img/sunspots.jpg">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/mars.jpg">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/moon.jpg">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/uranus.jpg">
+              </div>
+
+            </div>
+          </div>
+
+        </div class="row">
         <h3>Stars in the Heavens</h3>
         <img src="/img/sunspots.jpg" alt="star" class="float-right img-thumbnail w-25" />
         <p>Across the centuries, another world at the edge of forever paroxysm of global death corpus callosum Drake Equation
@@ -41,20 +63,20 @@
           cluster great turbulent clouds Apollonius of Perga not a sunrise but a galaxyrise dispassionate extraterrestrial
           observer rich in heavy atoms, courage of our questions dream of the mind's eye galaxies Cambrian explosion network
           of wormholes?</p>
-          <div class="row">
-            <div class="col">
-              <img src="/img/black-hole.jpg" class="img-fluid">
-            </div>
-            <div class="col">
-              <img src="/img/M-106.jpg" class="img-fluid">
-            </div>
-            <div class="col">
-              <img src="/img/mystic-mountain.jpg" class="img-fluid">
-            </div>
-            <div class="col">
-              <img src="/img/comet.jpg" class="img-fluid">
-            </div>
+        <div class="row">
+          <div class="col">
+            <img src="/img/black-hole.jpg" class="img-fluid">
           </div>
+          <div class="col">
+            <img src="/img/M-106.jpg" class="img-fluid">
+          </div>
+          <div class="col">
+            <img src="/img/mystic-mountain.jpg" class="img-fluid">
+          </div>
+          <div class="col">
+            <img src="/img/comet.jpg" class="img-fluid">
+          </div>
+        </div>
 
         <ul>
           <li>Otherworldly</li>
@@ -141,6 +163,24 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div id="planet-parent">
+
+          <h4>
+            <a href="#" data-toggle="collapse" data-target="#first">First Planet</a>
+          </h4>
+          <div id="first" class="collapse show" data-parent="#planet-parent">
+            <p>Mercury</p>
+          </div>
+
+          <h4>
+            <a href="#" data-toggle="collapse" data-target="#second">Second</a>
+          </h4>
+          <div id="second" class="collapse hide" data-parent="#planet-parent">
+            <p>Venus</p>
+          </div>
+
         </div>
 
       </div>
