--- a/Labs/Lab5/before/index.html
+++ b/Labs/Lab5/before/index.html
@@ -41,20 +41,20 @@
           cluster great turbulent clouds Apollonius of Perga not a sunrise but a galaxyrise dispassionate extraterrestrial
           observer rich in heavy atoms, courage of our questions dream of the mind's eye galaxies Cambrian explosion network
           of wormholes?</p>
-          <div class="row">
-            <div class="col">
-              <img src="/img/black-hole.jpg" class="img-fluid">
-            </div>
-            <div class="col">
-              <img src="/img/M-106.jpg" class="img-fluid">
-            </div>
-            <div class="col">
-              <img src="/img/mystic-mountain.jpg" class="img-fluid">
-            </div>
-            <div class="col">
-              <img src="/img/comet.jpg" class="img-fluid">
-            </div>
+        <div class="row">
+          <div class="col">
+            <img src="/img/black-hole.jpg" class="img-fluid">
           </div>
+          <div class="col">
+            <img src="/img/M-106.jpg" class="img-fluid">
+          </div>
+          <div class="col">
+            <img src="/img/mystic-mountain.jpg" class="img-fluid">
+          </div>
+          <div class="col">
+            <img src="/img/comet.jpg" class="img-fluid">
+          </div>
+        </div>
 
         <ul>
           <li>Otherworldly</li>
@@ -142,7 +142,22 @@
             </div>
           </div>
         </div>
-        
+
+        <div>
+          <h4>
+            <a href="#">First Planet</a>
+          </h4>
+          <div>
+            <p>Mercury</p>
+          </div>
+          <h4>
+            <a href="#">Second</a>
+          </h4>
+          <div>
+            <p>Venus</p>
+          </div>
+        </div>
+
       </div>
       <div class=" col-md-3 col-lg-4 col-sm-2 ">
         <div class="alert alert-info ">
