--- a/Labs/Lab3/before/index.html
+++ b/Labs/Lab3/before/index.html
@@ -112,6 +112,22 @@
             </td>
           </tr>
         </table>
+
+        <div>
+          <h4>
+            <a href="#">First Planet</a>
+          </h4>
+          <div>
+            <p>Mercury</p>
+          </div>
+          <h4>
+            <a href="#">Second</a>
+          </h4>
+          <div>
+            <p>Venus</p>
+          </div>
+        </div>
+        
       </div>
       <div class="col-md-3 col-lg-4 col-sm-2">
         <h3>Contact Form</h3>
