--- a/Labs/Lab4/after/index.html
+++ b/Labs/Lab4/after/index.html
@@ -142,7 +142,22 @@
             </div>
           </div>
         </div>
-        
+
+        <div>
+          <h4>
+            <a href="#">First Planet</a>
+          </h4>
+          <div>
+            <p>Mercury</p>
+          </div>
+          <h4>
+            <a href="#">Second</a>
+          </h4>
+          <div>
+            <p>Venus</p>
+          </div>
+        </div>
+
       </div>
       <div class=" col-md-3 col-lg-4 col-sm-2 ">
         <div class="alert alert-info ">
